<resources>
    <string name="app_name">taskmaster</string>
    <string name="nick_name">%1$s</string>
    <string name="team_name">%1$s</string>
    <string name="user_nick_name">User name</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_master">Task Master</string>
    <string name="study">Study</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_vivamus_porta_tortor_ac_tincidunt_pulvinar_massa_odio_rutrum_ante_non_laoreet_diam_magna_eget_neque_in_ut_ante_id_tellus_aliquam_elementum_eu_non_risus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta, tortor ac tincidunt pulvinar, massa odio rutrum ante, non laoreet diam magna eget neque. In ut ante id tellus aliquam elementum eu non risus.</string>
    <string name="list_of_tasks">List of Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="total_task_0">Total Task : 0</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="task_state">Task State</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>